--- a/app/src/main/res/layout/finalmarks_fragment.xml
+++ b/app/src/main/res/layout/finalmarks_fragment.xml
@@ -18,12 +18,17 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:id="@+id/swipe_container"
+            android:layout_height="wrap_content">
+
         <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recyclerView"
         android:layout_height="wrap_content" />
 
-
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 
 
