--- a/app/src/main/res/layout/mark_item.xml
+++ b/app/src/main/res/layout/mark_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:padding="2dp"
+        android:paddingTop="2dp"
+        android:paddingStart="2dp"
         android:layout_height="match_parent">
         <androidx.cardview.widget.CardView
             android:layout_width="27dp"
