--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
   <color name="accent">#448AFF</color>
   <color name="secondaryText">#BDBDBD</color>
 
-
+  <color name="statusbarColor">#3266bf</color>
 
 
 
@@ -60,7 +60,12 @@
   <color name="BLUE">#2196F3</color>
   <color name="mtrl_textinput_default_box_stroke_color">#fff</color>
   <color name="WHITE">#e0e0e0</color>
-
+  <color name="periodButtonColor">@color/white</color>
+  <color name="periodButtonColorActive">#E1F5FE</color>
+  <color name="periodButtonTextColor">#67686a</color>
+  <color name="periodButtonTextColorActive">@color/accent</color>
+  <color name="periodButtonStrokeColor">#e3e2e6</color>
+  <color name="periodButtonStrokeColorActive">@color/periodButtonColorActive</color>
 
 
 </resources>
