Diary fixes, Finalmarks fixes, начата работа над расписанием - данные получены, осталось написать лэйауты и recyclerview с адаптерами.

--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -56,24 +56,14 @@
 </LinearLayout>
 
 
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
-                    <TextView
-                        android:id="@+id/weekdayText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1 урок - Алгебра (215) \n2 урок, 2 гр. - Химия (320)"
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textSize="20dp"
-                        android:paddingStart="10dp"
-                        android:paddingTop="-10dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        />
-
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:paddingTop="10dp"/>
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="10dp"
+                            android:paddingTop="10dp" />
                     </LinearLayout>
 
 
