--- a/app/src/main/res/layout/dairy.xml
+++ b/app/src/main/res/layout/dairy.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:id="@+id/viewPager"
         android:layout_weight="1"
