--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/optionsButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:tint="@color/icon"
                     android:background="?android:selectableItemBackground"
                     android:src="@drawable/ic_action_name"
                     app:layout_constraintRight_toRightOf="parent"
