--- a/app/src/main/res/layout/item_timetable.xml
+++ b/app/src/main/res/layout/item_timetable.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <FrameLayout
     android:layout_width="match_parent"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
     android:layout_height="match_parent">
 
         <androidx.cardview.widget.CardView
@@ -33,12 +35,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/colorPrimary"
-    >
+                <LinearLayout
+                  android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@color/colorPrimary">
                     <TextView
                         android:id="@+id/weekdayName"
                         android:layout_gravity="center"
@@ -47,23 +48,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Понедельник"
-                        android:textSize="26sp"
+                        android:textSize="18sp"
                         android:paddingLeft="5dp"
                         android:paddingTop="-4dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         />
-</LinearLayout>
-
-
-                        <androidx.recyclerview.widget.RecyclerView
+                       </LinearLayout>
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:divider="?android:dividerHorizontal"
+                            android:showDividers="middle"
+                            android:id="@+id/lessonsLayout"/>
+
 
                         <Space
                             android:layout_width="match_parent"
                             android:layout_height="10dp"
                             android:paddingTop="10dp" />
+
+
                     </LinearLayout>
 
 
