--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
   <dimen name="fab_margin">16dp</dimen>
   <dimen name="appbar_padding_top">8dp</dimen>
   <dimen name="text_margin">16dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
+    <dimen name="card_padding">16dp</dimen>
+    <dimen name="avatar_size">40dp</dimen>
+    <dimen name="drawer_header_height">176dp</dimen>
+
 </resources>
