--- a/app/src/main/res/layout/widget_lesson.xml
+++ b/app/src/main/res/layout/widget_lesson.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="1dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rounded_corners_shape"
         android:layout_height="wrap_content">
